@@ -1,84 +1,0 @@
-@prefix doap: <http://usefulinc.com/ns/doap#> .
-@prefix foaf: <http://xmlns.com/foaf/0.1/> .
-@prefix lv2: <http://lv2plug.in/ns/lv2core#> .
-@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
-@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
-@prefix ll: <http://ll-plugins.nongnu.org/lv2/namespace#> .
-@prefix guiext: <http://lv2plug.in/ns/extensions/ui#> .
-
-<http://avwlv2.sourceforge.net/plugins/avw/jacklfo/gui>
-  a guiext:GtkUI ;
-  guiext:binary <jacklfo_gui.so> ;
-  guiext:requiredFeature guiext:makeResident .
-
-<http://avwlv2.sourceforge.net/plugins/avw/jacklfo>
-	a lv2:Plugin ,
-		lv2:JACKLFO ;
-	doap:maintainer [
-		foaf:name "Aurélien Leblond" ;
-		foaf:mbox <mailto:blablack@gmail.com>
-	] ;
-	doap:name "Jack Sync LFO" ;
-	doap:license <http://opensource.org/licenses/isc-license> ;
-	ll:pegName "p" ;
-	guiext:ui <http://avwlv2.sourceforge.net/plugins/avw/jacklfo/gui> ;
-	lv2:property lv2:hardRtCapable ;
-	lv2:port [
-		a lv2:AudioPort ,
-			lv2:InputPort ;
-		lv2:index 0 ;
-		lv2:symbol "reset" ;
-		lv2:name "Reset" 
-	] , [
-		a lv2:InputPort, lv2:ControlPort ;
-		lv2:index 1 ;
-		lv2:symbol "waveForm" ;
-		lv2:name "Wave Form" ;
-		lv2:default 0;
-		lv2:minimum 0;
-		lv2:maximum 6;
-		lv2:scalePoint  
-				[
-			    rdfs:label "Sine" ;
-			    rdf:value 0
-		] ,		[
-				rdfs:label "Triangle" ;
-				rdf:value 1
-		] ,		[
-		  		rdfs:label "Sawtooth Up" ;
-				rdf:value 2
-		] , 	[
-		  		rdfs:label "Sawtooth Down" ;
-				rdf:value 3
-		] ,		[
-		  		rdfs:label "Rectangle" ;
-				rdf:value 4
-		] ,		[
-		  		rdfs:label "S & H" ;
-				rdf:value 5
-		]
-	] ,	[
-		a lv2:InputPort ,
-			lv2:ControlPort ;
-		lv2:index 2 ;
-		lv2:symbol "frequency" ;
-		lv2:name "Tempo Division-Multiplier" ;
-		lv2:default 1.0 ;
-		lv2:minimum 0.0 ;
-		lv2:maximum 100.0 
-	] ,	[
-		a lv2:InputPort ,
-			lv2:ControlPort ;
-		lv2:index 3 ;
-		lv2:symbol "phi0" ;
-		lv2:name "Phi0" ;
-		lv2:default 0 ;
-		lv2:minimum 0.0 ;
-		lv2:maximum 6.28
-	] ,	[
-		a lv2:AudioPort ,
-			lv2:OutputPort ;
-		lv2:index 4 ;
-		lv2:symbol "output" ;
-		lv2:name "Output"
-	] .
