@@ -4,6 +4,10 @@
 @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
 @prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
 @prefix ll: <http://ll-plugins.nongnu.org/lv2/namespace#> .
+@prefix atom: <http://lv2plug.in/ns/ext/atom#> .
+@prefix urid: <http://lv2plug.in/ns/ext/urid#> .
+@prefix time: <http://lv2plug.in/ns/ext/time#> .
+@prefix pprops: <http://lv2plug.in/ns/ext/port-props#> .
 
 <http://avwlv2.sourceforge.net/plugins/avw/tranches>
 	a lv2:Plugin ,
@@ -21,29 +25,36 @@
 		lv2:index 0 ;
 		lv2:symbol "trigger" ;
 		lv2:name "Trigger" 
+	] , [
+		a lv2:InputPort , atom:AtomPort ;
+		atom:bufferType atom:Sequence ;
+		atom:supports time:Position ;
+		lv2:index 1 ;
+		lv2:symbol "control" ;
+		lv2:name "Control" ;
 	] ,	[
 		a lv2:AudioPort , lv2:InputPort ;
-		lv2:index 1 ;
+		lv2:index 2 ;
 		lv2:symbol "inputL" ;
 		lv2:name "Input Left"
 	] ,	[
 		a lv2:AudioPort , lv2:InputPort ;
-		lv2:index 2 ;
+		lv2:index 3 ;
 		lv2:symbol "inputR" ;
 		lv2:name "Input Right"
 	] ,	[
 		a lv2:AudioPort , lv2:OutputPort ;
-		lv2:index 3 ;
+		lv2:index 4 ;
 		lv2:symbol "outputL" ;
 		lv2:name "Output Left"
 	] ,	[
 		a lv2:AudioPort , lv2:OutputPort ;
-		lv2:index 4 ;
+		lv2:index 5 ;
 		lv2:symbol "outputR" ;
 		lv2:name "Output Right"
 	] ,	[
 		a lv2:InputPort , lv2:ControlPort ;
-		lv2:index 5 ;
+		lv2:index 6 ;
 		lv2:symbol "slice" ;
 		lv2:name "Size of Slice" ;
 		lv2:default 1.0 ;
@@ -51,10 +62,12 @@
 		lv2:maximum 1.0 
 	] ,	[
 		a lv2:InputPort , lv2:ControlPort ;
-		lv2:index 6 ;
+		lv2:index 7 ;
 		lv2:symbol "reverse" ;
 		lv2:name "Reverse" ;
 		lv2:default 0 ;
 		lv2:minimum 0 ;
-		lv2:maximum 1 
+		lv2:maximum 1 ;
+		lv2:portProperty pprops:hasStrictBounds;
+		lv2:PortProperty lv2:toggled;
 	] .
