@@ -20,6 +20,7 @@ static const char p_uri[] = "http://avwlv2.sourceforge.net/plugins/avw/tranches"
 
 enum p_port_enum {
   p_trigger,
+  p_control,
   p_inputL,
   p_inputR,
   p_outputL,
@@ -30,6 +31,7 @@ enum p_port_enum {
 };
 
 static const peg_data_t p_ports[] = {
+  { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
   { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
   { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
   { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
