@@ -5,6 +5,7 @@
 	* Non Linear Dial (very dirty method)
 	* Remove JACKLFO (not necessary, using LV2 Time)
 	* LFO frequency can be set manually or in sync with LV2 Time
+	* Tranches plugin now using LV2 Time
 
 0.0.8:
 	* VCF GUI
